codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__slash_btw_requests_forked_side_question_while_task_running.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 7306
expression: terminal.backend()
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"   BTW starting...                                           100% context left  "
